feat(auth): implement application api keys
